# OpenAI-Experiments

./: .gitignore  flake.nix  pyproject.toml
openai_test/: __main__.py  pyproject.toml
related_quote_finder/: main.ipynb  pyproject.toml
