[tool.poetry]
name = "related-quote-finder"
version = "0.1.0"
description = ""
authors = ["RedEtherbloom <etherbloom+github@mailbox.org>"]
package-mode = false

[tool.poetry.dependencies]
# Pinecone constraint
python = ">=3.12,<3.14"
langchain = "^0.3.23"
python-dotenv = "^1.1.0"
langchain-pinecone = "^0.2.5"
pinecone-notebooks = "^0.1.1"
langchain-openai = "^0.3.14"
langchain-text-splitters = "^0.3.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
